--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
   text-align: center;
 }
-
 .logo {
   height: 6em;
   padding: 1.5em;
