--- a/src/components/header.css
+++ b/src/components/header.css
@@ -7,14 +7,14 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  font-family: Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #f8f8f8; 
 }
 
 
 header {
   width: 100%;
-  background-color: red;
+  background-color: #CE2829;
   padding: 20px 0;
   display: flex;
   justify-content: space-between;
@@ -57,3 +57,5 @@ main {
   padding-top: 100px; 
   text-align: center;
 }
+
+
