--- a/src/App.css
+++ b/src/App.css
@@ -5,36 +5,100 @@
   width: 100%;
   text-align: center;
 }
-
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  margin-top: 2rem;
+}
+.home-container {
+  font-family: 'Roboto', sans-serif;
+}
+.category-menu {
+  display: flex;
+  justify-content: center; ;
+  background-color: white;
 }
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.category-item {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  margin: 0 0.2rem;
+  text-decoration: none; 
+  color:#292929; 
+  border-radius: 5px; 
+  transition: background-color 0.3s;
+
 }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.category-item:hover {
+  background-color:  #fde4b9;
+}
+.product-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  grid-template-rows: auto auto; 
+  grid-gap: 20px;
+  padding: 20px;
+  flex: 1;
+  overflow-y: auto;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product-card {
+  position: relative; 
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.2s;
+  width: 100%;
+ 
 }
 
-@media screen and (min-width: 400px) and (max-width: 1000px) {
-  .logo {
-   width: 100%;
-   height: auto;
-   object-fit: cover;
-  }
+.product-card:first-child {
+  grid-column: 1 / 2; 
+  grid-row: 1/ 3; 
 }
+
+
+.product-card:nth-child(2) {
+  grid-column: 2 / 3; 
+  grid-row: 1 / 2; 
+}
+
+.product-card:nth-child(3) {
+  grid-column: 2 / 3; 
+  grid-row: 2 / 3; 
+}
+
+.product-card:hover {
+  transform: scale(1.02);
+}
+
+.product-content {
+  padding: 20px;
+  flex: 1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.product-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute; 
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.product-content {
+
+  padding: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+}
+
 
