--- a/src/components/homePage/homePage.css
+++ b/src/components/homePage/homePage.css
@@ -91,6 +91,8 @@
     justify-content: space-between;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    align-items: center;
+    justify-content: center ;
   }
   
   
